# FacetrackingSystem

./: Dlib_WebcamFaceTracker.sln  README.md
Dlib_WebcamFaceTracker/: CameraDetector.cpp  Dlib_WebcamFaceTracker.cpp  Dlib_WebcamFaceTracker.vcxproj  Dlib_WebcamFaceTracker.vcxproj.filters  FacetrackingSystem.cpp  FacetrackingSystem.h  main.cpp
Linux/: .gitignore  CMakeLists.txt  FaceTracker.cpp  FaceTracker.hpp  main.cpp
Win32/Dlib_WebcamFaceTracker/: .gitignore  Dlib_WebcamFaceTracker.vcxproj  FacetrackingSystem.cpp  FacetrackingSystem.h
